# yadisk-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  get_token.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_crud.py  test_disk_info.py  test_listing.py  test_metadata.py  test_read_only.py  test_security.py  test_sharing.py  test_trash.py  test_upload.py
yadisk_mcp/: __init__.py  server.py
